--- a/build.gradle
+++ b/build.gradle
@@ -174,6 +174,16 @@ dependencies {
     implementation group: 'junit', name: 'junit', version: '4.13'
 }
 
+dependencyManagement {
+    dependencies {
+        dependencySet(group: 'org.apache.logging.log4j', version: '2.15.0') {
+            entry 'log4j-api'
+            entry 'log4j-to-slf4j'
+        }
+    }
+
+}
+
 wrapper {
     distributionType = Wrapper.DistributionType.ALL
 }
